// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert Component > renders error alert 1`] = `
<div
  class="flex items-start space-x-3 rounded-md border p-4 bg-red-50 border-red-200 text-red-800"
>
  <svg
    aria-hidden="true"
    class="h-5 w-5 flex-shrink-0 mt-0.5"
    data-slot="icon"
    fill="none"
    stroke="currentColor"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
  <div
    class="flex-1"
  >
    An error occurred!
  </div>
</div>
`;

exports[`Alert Component > renders info alert 1`] = `
<div
  class="flex items-start space-x-3 rounded-md border p-4 bg-blue-50 border-blue-200 text-blue-800"
>
  <svg
    aria-hidden="true"
    class="h-5 w-5 flex-shrink-0 mt-0.5"
    data-slot="icon"
    fill="none"
    stroke="currentColor"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
  <div
    class="flex-1"
  >
    Information message
  </div>
</div>
`;

exports[`Alert Component > renders success alert 1`] = `
<div
  class="flex items-start space-x-3 rounded-md border p-4 bg-green-50 border-green-200 text-green-800"
>
  <svg
    aria-hidden="true"
    class="h-5 w-5 flex-shrink-0 mt-0.5"
    data-slot="icon"
    fill="none"
    stroke="currentColor"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
  <div
    class="flex-1"
  >
    Operation successful!
  </div>
</div>
`;

exports[`Alert Component > renders warning alert 1`] = `
<div
  class="flex items-start space-x-3 rounded-md border p-4 bg-yellow-50 border-yellow-200 text-yellow-800"
>
  <svg
    aria-hidden="true"
    class="h-5 w-5 flex-shrink-0 mt-0.5"
    data-slot="icon"
    fill="none"
    stroke="currentColor"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126ZM12 15.75h.007v.008H12v-.008Z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
  <div
    class="flex-1"
  >
    Warning message
  </div>
</div>
`;
